fixed jwt and some other bugs